// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> with \`as\` prop matches with snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  min-width: 12.5rem;
  min-height: 3.125rem;
  padding: 0 1.875rem;
  font-size: 0.8888888888888888rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.8888888888888888rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appareance: none;
  -moz-appareance: none;
  appareance: none;
  outline: none;
  cursor: pointer;
  border: 0.125rem solid #eee;
  background-color: #fff;
  color: #222;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 >:nth-child(n) {
  margin-right: 0.625rem;
  text-align: left;
}

.c0 >:last-child {
  margin-right: 0;
}

.c0 svg,
.c0 path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0:hover,
.c0:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c0:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c0:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    width: 12.5rem;
    height: 3.125rem;
  }
}

<input
  className="c0"
  type="submit"
  value="MyButton"
/>
`;

exports[`<Button /> with \`big\` prop matches with snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  min-width: 12.5rem;
  min-height: 3.125rem;
  padding: 0 1.875rem;
  font-size: 0.8888888888888888rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.8888888888888888rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appareance: none;
  -moz-appareance: none;
  appareance: none;
  outline: none;
  cursor: pointer;
  border: 0.125rem solid #eee;
  background-color: #fff;
  color: #222;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 >:nth-child(n) {
  margin-right: 0.625rem;
  text-align: left;
}

.c0 >:last-child {
  margin-right: 0;
}

.c0 svg,
.c0 path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0:hover,
.c0:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c0:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c0:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    width: 12.5rem;
    height: 3.125rem;
  }
}

@media (min-width:40rem) {
  .c0 {
    min-width: 13.75rem;
    min-height: 4.375rem;
    padding: 0 2.5rem;
    font-size: 1rem;
  }
}

@media screen and (min-width:40rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    width: 13.75rem;
    height: 4.375rem;
  }
}

<button
  className="c0"
>
  MyButton
</button>
`;

exports[`<Button /> with \`borderRadius\` prop matches with snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  min-width: 12.5rem;
  min-height: 3.125rem;
  padding: 0 1.875rem;
  font-size: 0.8888888888888888rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.8888888888888888rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appareance: none;
  -moz-appareance: none;
  appareance: none;
  outline: none;
  cursor: pointer;
  border-radius: 0.25rem;
  border: 0.125rem solid #eee;
  background-color: #fff;
  color: #222;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 >:nth-child(n) {
  margin-right: 0.625rem;
  text-align: left;
}

.c0 >:last-child {
  margin-right: 0;
}

.c0 svg,
.c0 path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0:hover,
.c0:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c0:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c0:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    width: 12.5rem;
    height: 3.125rem;
  }
}

<button
  className="c0"
>
  MyButton
</button>
`;

exports[`<Button /> with \`fluid\` prop matches with snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  min-width: 12.5rem;
  min-height: 3.125rem;
  padding: 0 1.875rem;
  font-size: 0.8888888888888888rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.8888888888888888rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appareance: none;
  -moz-appareance: none;
  appareance: none;
  outline: none;
  cursor: pointer;
  min-width: initial;
  width: 100%;
  border: 0.125rem solid #eee;
  background-color: #fff;
  color: #222;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 >:nth-child(n) {
  margin-right: 0.625rem;
  text-align: left;
}

.c0 >:last-child {
  margin-right: 0;
}

.c0 svg,
.c0 path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0:hover,
.c0:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c0:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c0:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    width: 12.5rem;
    height: 3.125rem;
  }
}

<button
  className="c0"
>
  MyButton
</button>
`;

exports[`<Button /> with \`giant\` prop matches with snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  min-width: 12.5rem;
  min-height: 3.125rem;
  padding: 0 1.875rem;
  font-size: 0.8888888888888888rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.8888888888888888rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appareance: none;
  -moz-appareance: none;
  appareance: none;
  outline: none;
  cursor: pointer;
  min-height: 4.375rem;
  font-size: 0.8888888888888888rem;
  padding: 0 0.625rem;
  border: 0.125rem solid #eee;
  background-color: #fff;
  color: #222;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 >:nth-child(n) {
  margin-right: 0.625rem;
  text-align: left;
}

.c0 >:last-child {
  margin-right: 0;
}

.c0 svg,
.c0 path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0:hover,
.c0:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c0:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c0:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    width: 12.5rem;
    height: 3.125rem;
  }
}

@media (min-width:768px) {
  .c0 {
    min-width: 13.75rem;
    min-height: 5.625rem;
    font-size: 1rem;
    padding: 0 2.5rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    width: 13.75rem;
    height: 5.625rem;
  }
}

<button
  className="c0"
>
  MyButton
</button>
`;

exports[`<Button /> with \`huge\` prop matches with snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  min-width: 12.5rem;
  min-height: 3.125rem;
  padding: 0 1.875rem;
  font-size: 0.8888888888888888rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.8888888888888888rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appareance: none;
  -moz-appareance: none;
  appareance: none;
  outline: none;
  cursor: pointer;
  min-height: 4.375rem;
  font-size: 0.8888888888888888rem;
  padding: 0 0.625rem;
  border: 0.125rem solid #eee;
  background-color: #fff;
  color: #222;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 >:nth-child(n) {
  margin-right: 0.625rem;
  text-align: left;
}

.c0 >:last-child {
  margin-right: 0;
}

.c0 svg,
.c0 path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0:hover,
.c0:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c0:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c0:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    width: 12.5rem;
    height: 3.125rem;
  }
}

@media (min-width:768px) {
  .c0 {
    min-width: 13.75rem;
    min-height: 5rem;
    font-size: 1rem;
    padding: 0 2.5rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    width: 13.75rem;
    height: 5rem;
  }
}

<button
  className="c0"
>
  MyButton
</button>
`;

exports[`<Button /> with \`oxygen\` \`modifier\` prop matches with snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  min-width: 12.5rem;
  min-height: 3.125rem;
  padding: 0 1.875rem;
  font-size: 0.8888888888888888rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.8888888888888888rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appareance: none;
  -moz-appareance: none;
  appareance: none;
  outline: none;
  cursor: pointer;
  border: 0.125rem dashed #bae8fd;
  background-color: #fff;
  color: #19b4fa;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 >:nth-child(n) {
  margin-right: 0.625rem;
  text-align: left;
}

.c0 >:last-child {
  margin-right: 0;
}

.c0 svg,
.c0 path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0:hover,
.c0:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c0:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c0:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    width: 12.5rem;
    height: 3.125rem;
  }
}

<button
  className="c0"
>
  MyButton
</button>
`;

exports[`<Button /> with \`tiny\` prop matches with snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  min-width: 12.5rem;
  min-height: 3.125rem;
  padding: 0 1.875rem;
  font-size: 0.8888888888888888rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.8888888888888888rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appareance: none;
  -moz-appareance: none;
  appareance: none;
  outline: none;
  cursor: pointer;
  min-width: 10rem;
  min-height: 2.5rem;
  padding: 0 1.25rem;
  font-size: 0.8888888888888888rem;
  border: 0.125rem solid #eee;
  background-color: #fff;
  color: #222;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 >:nth-child(n) {
  margin-right: 0.625rem;
  text-align: left;
}

.c0 >:last-child {
  margin-right: 0;
}

.c0 svg,
.c0 path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0:hover,
.c0:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c0:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c0:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    width: 12.5rem;
    height: 3.125rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    width: 10rem;
    height: 2.5rem;
  }
}

<button
  className="c0"
>
  MyButton
</button>
`;

exports[`<Button /> with icon and big matches with snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  min-width: 12.5rem;
  min-height: 3.125rem;
  padding: 0 1.875rem;
  font-size: 0.8888888888888888rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.8888888888888888rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appareance: none;
  -moz-appareance: none;
  appareance: none;
  outline: none;
  cursor: pointer;
  min-width: initial;
  min-height: initial;
  width: 3.125rem;
  height: 3.125rem;
  padding: 0;
  border: 0.125rem solid #eee;
  background-color: #fff;
  color: #222;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 >:nth-child(n) {
  margin-right: 0.625rem;
  text-align: left;
}

.c0 >:last-child {
  margin-right: 0;
}

.c0 svg,
.c0 path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0:hover,
.c0:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c0:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c0:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    width: 12.5rem;
    height: 3.125rem;
  }
}

@media (min-width:40rem) {
  .c0 {
    min-width: 13.75rem;
    min-height: 4.375rem;
    padding: 0 2.5rem;
    font-size: 1rem;
  }
}

@media screen and (min-width:40rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    width: 13.75rem;
    height: 4.375rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    width: 3.125rem;
    min-width: 0;
    min-height: 0;
  }
}

@media (min-width:40rem) {
  .c0 {
    width: 4.375rem;
    height: 4.375rem;
  }
}

@media screen and (min-width:40rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    width: 4.375rem;
  }
}

<button
  className="c0"
>
  !
</button>
`;

exports[`<Button /> with icon and fluid matches with snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  min-width: 12.5rem;
  min-height: 3.125rem;
  padding: 0 1.875rem;
  font-size: 0.8888888888888888rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.8888888888888888rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appareance: none;
  -moz-appareance: none;
  appareance: none;
  outline: none;
  cursor: pointer;
  min-width: initial;
  width: 100%;
  border: 0.125rem solid #eee;
  background-color: #fff;
  color: #222;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 >:nth-child(n) {
  margin-right: 0.625rem;
  text-align: left;
}

.c0 >:last-child {
  margin-right: 0;
}

.c0 svg,
.c0 path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0:hover,
.c0:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c0:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c0:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    width: 12.5rem;
    height: 3.125rem;
  }
}

<button
  className="c0"
>
  !
</button>
`;

exports[`<Button /> with icon and giant matches with snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  min-width: 12.5rem;
  min-height: 3.125rem;
  padding: 0 1.875rem;
  font-size: 0.8888888888888888rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.8888888888888888rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appareance: none;
  -moz-appareance: none;
  appareance: none;
  outline: none;
  cursor: pointer;
  min-height: 4.375rem;
  font-size: 0.8888888888888888rem;
  padding: 0 0.625rem;
  min-width: initial;
  min-height: initial;
  width: 3.125rem;
  height: 3.125rem;
  padding: 0;
  min-width: initial;
  width: 4.375rem;
  height: 4.375rem;
  border: 0.125rem solid #eee;
  background-color: #fff;
  color: #222;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 >:nth-child(n) {
  margin-right: 0.625rem;
  text-align: left;
}

.c0 >:last-child {
  margin-right: 0;
}

.c0 svg,
.c0 path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0:hover,
.c0:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c0:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c0:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    width: 12.5rem;
    height: 3.125rem;
  }
}

@media (min-width:768px) {
  .c0 {
    min-width: 13.75rem;
    min-height: 5.625rem;
    font-size: 1rem;
    padding: 0 2.5rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    width: 13.75rem;
    height: 5.625rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    width: 3.125rem;
    min-width: 0;
    min-height: 0;
  }
}

@media (min-width:48rem) {
  .c0 {
    min-width: initial;
    width: 5.625rem;
    height: 5.625rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    width: 5.625rem;
  }
}

<button
  className="c0"
>
  !
</button>
`;

exports[`<Button /> with icon and huge matches with snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  min-width: 12.5rem;
  min-height: 3.125rem;
  padding: 0 1.875rem;
  font-size: 0.8888888888888888rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.8888888888888888rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appareance: none;
  -moz-appareance: none;
  appareance: none;
  outline: none;
  cursor: pointer;
  min-height: 4.375rem;
  font-size: 0.8888888888888888rem;
  padding: 0 0.625rem;
  min-width: initial;
  min-height: initial;
  width: 3.125rem;
  height: 3.125rem;
  padding: 0;
  min-width: initial;
  width: 4.375rem;
  height: 4.375rem;
  border: 0.125rem solid #eee;
  background-color: #fff;
  color: #222;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 >:nth-child(n) {
  margin-right: 0.625rem;
  text-align: left;
}

.c0 >:last-child {
  margin-right: 0;
}

.c0 svg,
.c0 path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0:hover,
.c0:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c0:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c0:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    width: 12.5rem;
    height: 3.125rem;
  }
}

@media (min-width:768px) {
  .c0 {
    min-width: 13.75rem;
    min-height: 5rem;
    font-size: 1rem;
    padding: 0 2.5rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    width: 13.75rem;
    height: 5rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    width: 3.125rem;
    min-width: 0;
    min-height: 0;
  }
}

@media (min-width:48rem) {
  .c0 {
    min-width: initial;
    width: 5rem;
    height: 5rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    width: 5rem;
  }
}

<button
  className="c0"
>
  !
</button>
`;

exports[`<Button /> with icon and tiny matches with snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  min-width: 12.5rem;
  min-height: 3.125rem;
  padding: 0 1.875rem;
  font-size: 0.8888888888888888rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.8888888888888888rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appareance: none;
  -moz-appareance: none;
  appareance: none;
  outline: none;
  cursor: pointer;
  min-width: 10rem;
  min-height: 2.5rem;
  padding: 0 1.25rem;
  font-size: 0.8888888888888888rem;
  min-width: initial;
  min-height: initial;
  width: 3.125rem;
  height: 3.125rem;
  padding: 0;
  width: 2.5rem;
  height: 2.5rem;
  border: 0.125rem solid #eee;
  background-color: #fff;
  color: #222;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 >:nth-child(n) {
  margin-right: 0.625rem;
  text-align: left;
}

.c0 >:last-child {
  margin-right: 0;
}

.c0 svg,
.c0 path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0:hover,
.c0:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c0:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c0:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    width: 12.5rem;
    height: 3.125rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    width: 10rem;
    height: 2.5rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    width: 3.125rem;
    min-width: 0;
    min-height: 0;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    width: 2.5rem;
  }
}

<button
  className="c0"
>
  !
</button>
`;

exports[`<Button /> with icon matches with snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  min-width: 12.5rem;
  min-height: 3.125rem;
  padding: 0 1.875rem;
  font-size: 0.8888888888888888rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.8888888888888888rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appareance: none;
  -moz-appareance: none;
  appareance: none;
  outline: none;
  cursor: pointer;
  min-width: initial;
  min-height: initial;
  width: 3.125rem;
  height: 3.125rem;
  padding: 0;
  border: 0.125rem solid #eee;
  background-color: #fff;
  color: #222;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 >:nth-child(n) {
  margin-right: 0.625rem;
  text-align: left;
}

.c0 >:last-child {
  margin-right: 0;
}

.c0 svg,
.c0 path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0:hover,
.c0:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c0:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c0:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    width: 12.5rem;
    height: 3.125rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    width: 3.125rem;
    min-width: 0;
    min-height: 0;
  }
}

<button
  className="c0"
>
  !
</button>
`;

exports[`<Button /> with some elements matches with snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  min-width: 12.5rem;
  min-height: 3.125rem;
  padding: 0 1.875rem;
  font-size: 0.8888888888888888rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.8888888888888888rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appareance: none;
  -moz-appareance: none;
  appareance: none;
  outline: none;
  cursor: pointer;
  border: 0.125rem solid #eee;
  background-color: #fff;
  color: #222;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 >:nth-child(n) {
  margin-right: 0.625rem;
  text-align: left;
}

.c0 >:last-child {
  margin-right: 0;
}

.c0 svg,
.c0 path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0:hover,
.c0:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c0:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c0:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    width: 12.5rem;
    height: 3.125rem;
  }
}

<button
  className="c0"
>
  <span>
    My
  </span>
  <span>
    Button
  </span>
</button>
`;

exports[`<Button /> with text matches with snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  min-width: 12.5rem;
  min-height: 3.125rem;
  padding: 0 1.875rem;
  font-size: 0.8888888888888888rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.8888888888888888rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appareance: none;
  -moz-appareance: none;
  appareance: none;
  outline: none;
  cursor: pointer;
  border: 0.125rem solid #eee;
  background-color: #fff;
  color: #222;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 >:nth-child(n) {
  margin-right: 0.625rem;
  text-align: left;
}

.c0 >:last-child {
  margin-right: 0;
}

.c0 svg,
.c0 path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0:hover,
.c0:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c0:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c0:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    width: 12.5rem;
    height: 3.125rem;
  }
}

<button
  className="c0"
>
  MyButton
</button>
`;
